# Thalamus

./: Cargo.toml  README.md  mac_setup.sh  overview.md  project_description.md  test.py  todo.md
src/: lib.rs  main.rs  p2p.rs  thalamus.rs
src/thalamus/: http.rs  services.rs  setup.rs  tools.rs
src/thalamus/services/: image.rs  llama.rs  tts.rs  whisper.rs
src/thalamus/services/image/: darknet.rs  nst.rs  ocnn.rs  srgan.rs  yolo.rs
src/thalamus/tools/: cidr.rs  netscan.rs
