[package]
name = "thalamus"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive", "rc"] }
log = "0.4.14"
rouille = "3.6.2"
error-chain = "0.12.4"
simple_logger = { git = "https://github.com/PixelCoda/rust-simple_logger.git", version = "1.13.6" }
wav = "1.0.0"
hound = "3.4.0"
sudo = "0.5"
clearscreen = "2.0.1"
mime = "0.3.17"
rand = "0.8.4"
local-ip-address = "0.5.3"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "json", "multipart"] }
port_scanner = "0.1.5"
sha2 = "0.10.6"
serde_json = "1.0.96"


env_logger = "0.10.0"
futures = "0.3.28"
libp2p = { version = "0.51.3", features = ["full", "async-std", "tcp", "dns", "websocket", "noise", "mplex", "yamux", "ping", "rendezvous", "identify"] }
enum-as-inner = "=0.5.1"
tokio = { version = "1.21.2", features = ["full"] }