[package]
name = "thalamus"
version = "0.0.12"
edition = "2021"
description = "A deep learning mesh node server platform for linux/mac/unix"
authors = ["Caleb Mitchell Smith-Woolrich <calebsmithwoolrich@gmail.com>"]
license = "GPL-3.0-only"
documentation = "https://docs.rs/thalamus"
repository = "https://github.com/PixelCoda/thalamus"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive", "rc"] }
log = "0.4.14"
rouille = "3.6.2"
error-chain = "0.12.4"
simple_logger = "1.13.6"
wav = "1.0.0"
sudo = "0.5"
clearscreen = "2.0.1"
mime = "0.3.17"
rand = "0.8.5"
local-ip-address = "0.5.3"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "json", "multipart"] }
port_scanner = "0.1.5"
sha2 = "0.10.6"
serde_json = "1.0.96"
simple-mdns  = { version = "0.4.0", features = ["async-tokio"] }
simple-dns = "0.5.2"
libp2p = { version = "0.51.3", features = ["full", "async-std", "tcp", "dns", "websocket", "noise", "mplex", "yamux", "ping", "rendezvous", "identify"] }
tokio = { version = "1.21.2", features = ["full"] }
libmdns = "0.7"